--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -1,16 +1,16 @@
-  @charset "UTF-8";
-  @mixin tablet {
-    @media (max-width: 768px) {
-      @content;
-    }
+@charset "UTF-8";
+@mixin tablet {
+  @media (max-width: 768px) {
+    @content;
   }
-  @mixin sp {
-    @media (max-width: 375px) {
-      @content;
-    }
+}
+@mixin sp {
+  @media (max-width: 375px) {
+    @content;
   }
-  // bace
-  * {
+}
+// bace
+* {
   box-sizing: content-box;
 }
 html {
@@ -18,7 +18,7 @@ html {
 }
 body {
   font-size: 1.6rem;
-  font-family: "Montserrat","Noto Sans JP", "YuGothic", sans-serif;
+  font-family: "Montserrat", "Noto Sans JP", "YuGothic", sans-serif;
   color: #333333;
 }
 a {
@@ -26,8 +26,8 @@ a {
   display: inline-block;
 }
 a:hover {
-  opacity: .7;
-  transition: opacity .3s;
+  opacity: 0.7;
+  transition: opacity 0.3s;
 }
 li {
   list-style: none;
@@ -39,7 +39,7 @@ img {
 .btn {
   width: 160px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #000000;
   line-height: 2.67;
   font-size: 1.2rem;
@@ -71,14 +71,14 @@ img {
       width: 260px;
       @include tablet {
         width: 189px;
-      };
+      }
       &.black svg path {
         fill: #333333;
-        transition: fill .3s;
+        transition: fill 0.3s;
       }
     }
     // header-nav//
-    .header-nav{
+    .header-nav {
       font-weight: bold;
       font-size: 2rem;
       position: fixed;
@@ -88,26 +88,26 @@ img {
       width: 36.1vw;
       text-align: center;
       padding: 180px 0 0;
-      background-color:rgba(34,34,34,.95);
+      background-color: rgba(34, 34, 34, 0.95);
       z-index: 2;
       transform: translateX(100%);
       opacity: 0;
-      transition: transform .3s,opacity .3s;
+      transition: transform 0.3s, opacity 0.3s;
       &.open {
         transform: translateX(0);
         opacity: 1;
-        transition: transform .3s,opacity .3s;
+        transition: transform 0.3s, opacity 0.3s;
       }
-      .nav-item{
+      .nav-item {
         margin-bottom: 30px;
-        .nav-item-link{
+        .nav-item-link {
           color: #fff;
         }
       }
-      &:first-of-type{
+      &:first-of-type {
         margin-bottom: 40px;
       }
-      &:last-of-type{
+      &:last-of-type {
         margin-bottom: 0;
       }
     }
@@ -123,39 +123,39 @@ img {
           display: block;
           height: 2px;
           width: 22px;
-          background-color: #FFFFFF;
+          background-color: #ffffff;
           margin-bottom: 5px;
-          transition: .3s;
+          transition: 0.3s;
           &:last-of-type {
             margin-bottom: 0;
           }
 
           &.cross.bar-top {
             transform: rotate(45deg) translate(0px, 10px);
-            transition: .3s;
+            transition: 0.3s;
           }
           &.cross.bar-mid {
             opacity: 0;
-            transition: .3s;
+            transition: 0.3s;
           }
           &.cross.bar-bottom {
             transform: rotate(-45deg) translate(0px, -10px);
-            transition: .3s;
+            transition: 0.3s;
           }
         }
       }
       &.black .bar {
         background-color: #333333;
-        transition: background-color .3s;
+        transition: background-color 0.3s;
       }
       .menu {
         font-size: 1rem;
         font-weight: bold;
-        color: #FFFFFF;
+        color: #ffffff;
       }
       &.black .menu {
         color: #333333;
-        transition: color .3s;
+        transition: color 0.3s;
       }
     }
 
@@ -166,7 +166,7 @@ img {
       left: 0;
       width: 100%;
       height: 100vh;
-      background-color: rgba(34, 34, 34, .6);
+      background-color: rgba(34, 34, 34, 0.6);
       z-index: 1;
     }
   }
@@ -185,20 +185,21 @@ body.noscroll {
     display: block;
     width: 50%;
     height: 100%;
-    background-color: #222222;
+    background-color: #4f545a;
+    opacity: 0.9;
     position: absolute;
     top: 0;
     right: 0;
     z-index: -1;
     @include tablet {
       width: 73.2%;
-    };
+    }
     @include sp {
       width: 75.5%;
-    };
+    }
   }
   .kv {
-    background-image: url(../img/kv-img2x.jpg);
+    background-image: url(../img/pexels-ashford-marx-7150075.jpg);
     background-position: center;
     background-size: cover;
     width: 76.4%;
@@ -209,12 +210,12 @@ body.noscroll {
       top: 50%;
       right: 0;
       transform: translate(-60%, -70%);
-      color: #FFFFFF;
+      color: #ffffff;
       @include tablet {
         top: 50%;
         right: 0;
         transform: translate(-25%, -75%);
-      };
+      }
       // @include sp {
       //   top: 50%;
       //   right: 0;
@@ -225,7 +226,7 @@ body.noscroll {
         font-size: 2rem;
         @include tablet {
           font-size: 1.6rem;
-        };
+        }
       }
       .copy-en {
         font-weight: bold;
@@ -233,14 +234,14 @@ body.noscroll {
         margin-bottom: 10px;
         @include tablet {
           font-size: 1.6rem;
-        };
+        }
       }
       .main-copy {
         font-weight: bold;
         font-size: 7.2rem;
         @include tablet {
           font-size: 5.6rem;
-        };
+        }
       }
     }
   }
@@ -253,9 +254,9 @@ body.noscroll {
   position: relative;
   @include tablet {
     height: auto;
-  };
+  }
   .about {
-    background-image: url(../img/about-img2x.jpg);
+    background-image: url(../img/pexels-laura-tancredi-7078666.jpg);
     background-size: cover;
     background-position: center;
     max-width: 1100px;
@@ -271,7 +272,7 @@ body.noscroll {
       height: auto;
       margin-top: 80px;
       padding: 60px 4vw;
-    };
+    }
     .about-content-wrapper {
       position: absolute;
       top: 110px;
@@ -279,13 +280,13 @@ body.noscroll {
       box-sizing: border-box;
       max-width: 590px;
       padding: 50px 30px;
-      background-color: rgba(255 ,255 ,255, 0.95);
+      background-color: rgba(255, 255, 255, 0.95);
       @include tablet {
         position: static;
         max-width: 590px;
         margin: 0 auto;
         padding: 40px 30px;
-      };
+      }
       .about-content {
         .about-text {
           font-family: "Noto Sans JP";
@@ -300,10 +301,10 @@ body.noscroll {
 // large-section
 .large-section-wrapper {
   padding: 180px 0 60px;
-  background-color: #F0F0F0;
-  @include tablet{
+  background-color: #f0f0f0;
+  @include tablet {
     padding: 60px 4vw 40px;
-  };
+  }
   .large-section {
     display: flex;
     max-width: 1100px;
@@ -312,7 +313,7 @@ body.noscroll {
     @include tablet {
       flex-direction: column;
       padding: 0;
-    };
+    }
     .small-section {
       margin-right: 60px;
       @include tablet {
@@ -321,7 +322,7 @@ body.noscroll {
         &:last-of-type {
           margin-bottom: 0;
         }
-      };
+      }
       &:last-of-type {
         margin-right: 0;
       }
@@ -343,32 +344,32 @@ body.noscroll {
   padding: 60px 0;
   @include tablet {
     padding: 40px 0;
-  };
+  }
   .topic {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 20px;
     @include tablet {
       padding: 0 4vw;
-    };
+    }
     .topic-content {
       display: flex;
       flex-direction: column;
       align-items: flex-end;
       @include tablet {
         align-items: baseline;
-      };
+      }
       .topic-list {
         max-width: 700px;
         .topic-item {
           margin-bottom: 30px;
-          border-bottom: solid 1px #DDDDDD;
+          border-bottom: solid 1px #dddddd;
           .topic-date {
             display: block;
             font-size: 1rem;
             font-weight: bold;
             margin-bottom: 9px;
-            color: #CECECE;
+            color: #cecece;
           }
           .topic-title {
             font-family: sans-serif;
@@ -387,10 +388,10 @@ body.noscroll {
 // contact
 .contact-wrapper {
   padding: 60px 0 120px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   @include tablet {
     padding: 40px 0 80px;
-  };
+  }
   .contact {
     max-width: 1100px;
     margin: 0 auto;
@@ -401,7 +402,7 @@ body.noscroll {
     @include tablet {
       flex-direction: column-reverse;
       padding: 0 4vw;
-    };
+    }
     .contact-content {
       max-width: 440px;
       margin-right: 80px;
@@ -415,8 +416,7 @@ body.noscroll {
       @include tablet {
         max-width: 520px;
         margin-bottom: 30px;
-
-      };
+      }
     }
   }
 }
@@ -427,7 +427,7 @@ footer {
   padding: 18px 0;
   text-align: center;
   background-color: #525252;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 1rem;
 }
 // footer
