--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -232,49 +232,59 @@ body.noscroll {
   position: absolute;
   top: 50%;
   right: 0;
-  transform: translate(-60%, -70%);
+  transform: translate(-10%, -50%);
   color: #ffffff;
-}
-
-@media (max-width: 768px) {
-  .fv .kv .copy-wrapper {
-    top: 50%;
-    right: 0;
-    transform: translate(-25%, -75%);
-  }
 }
 
 .fv .kv .copy-wrapper .copy-ja {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 3vw;
 }
 
 @media (max-width: 768px) {
   .fv .kv .copy-wrapper .copy-ja {
-    font-size: 1.6rem;
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 375px) {
+  .fv .kv .copy-wrapper .copy-ja {
+    font-size: 5vw;
   }
 }
 
 .fv .kv .copy-wrapper .copy-en {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 3vw;
   margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
   .fv .kv .copy-wrapper .copy-en {
-    font-size: 1.6rem;
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 375px) {
+  .fv .kv .copy-wrapper .copy-en {
+    font-size: 5vw;
   }
 }
 
 .fv .kv .copy-wrapper .main-copy {
   font-weight: bold;
-  font-size: 7.2rem;
+  font-size: 5vw;
 }
 
 @media (max-width: 768px) {
   .fv .kv .copy-wrapper .main-copy {
-    font-size: 5.6rem;
+    font-size: 6vw;
+  }
+}
+
+@media (max-width: 375px) {
+  .fv .kv .copy-wrapper .main-copy {
+    font-size: 7vw;
   }
 }
 
